apps/bulldozer-bot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulldozer-bot
  namespace: bulldozer-bot
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: bulldozer-bot
