apps/bulldozer-bot/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulldozer-bot-ingress
  namespace: bulldozer-bot
  labels:
    app: bulldozer-bot
spec:
  ingressClassName: nginx
  rules:
  - host: bulldozer.infra.adhp.dev
    http:
      paths:
      - backend:
          service:
            name: bulldozer-bot
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bulldozer.infra.adhp.dev
    secretName: bulldozer-infra-adhp-dev-tls
